Fix z-index of progress-train
Progress train should appear underneath any links that are floated in the same container.

--- a/app/assets/stylesheets/components/progress-train.scss
+++ b/app/assets/stylesheets/components/progress-train.scss
@@ -10,6 +10,7 @@ $progress-train-active: #333;
   right: 0;
   padding-top: 5px;
   white-space: nowrap;
+  z-index: -1;
   @include media-breakpoint-down(xs) {
     display: none;
   }
